# airpods-helper

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/src/: index.html  main.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: daemon.rs  main.rs  models.rs  state.rs
app/src-tauri/src/aap/: commands.rs  mod.rs  parser.rs
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml  airpods-daemon.service  org.costa.AirPods.service
daemon/src/: bluez.rs  config.rs  dbus.rs  eq.rs  l2cap.rs  main.rs  models.rs  mpris.rs  state.rs
daemon/src/aap/: commands.rs  mod.rs  parser.rs
eq-presets/: airpods-pro-crinacle.toml  bass-boost.toml  flat.toml  vocal-clarity.toml
packaging/: PKGBUILD  airpods-helper.install  build-deb.sh  build-tarball.sh
widget/: AirPodsBattery.tsx  AirPodsPopup.tsx  AirPodsService.ts  style.css
windows/: Cargo.toml  NOTES.md  README.md  WINDOWS_TESTING.md
windows/src/: ble.rs  http.rs  l2cap.rs  main.rs  state.rs
windows/src/aap/: commands.rs  mod.rs  parser.rs
