[workspace]
members = ["daemon", "cli"]
# windows/ is excluded from the workspace because it depends on Windows-specific
# crates (windows-rs, btleplug WinRT backend) that cannot build on Linux.
# On a Windows dev machine, either:
#   1. Build it standalone: cd windows && cargo build
#   2. Or add "windows" to members above and remove it from exclude.
exclude = ["windows"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
