[package]
name = "airpods-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bluer = { version = "0.17", features = ["l2cap", "bluetoothd"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = "2"
thiserror = "2"
anyhow = "1.0.102"
futures = "0.3.32"

[profile.release]
opt-level = "z"
lto = true
strip = true
