[package]
name = "airpods-windows"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "airpods-windows"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
uuid = "1"

# Windows-specific: Win32 Bluetooth Winsock for L2CAP raw sockets
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Devices_Bluetooth",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Enumeration",
] }
